--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,64 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+=<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Parede Celular e Membrana Plasmática</title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    
-<script src="/js/script.js"></script>
+  <header>
+    <h1>Parede Celular e Membrana Plasmática</h1>
+    <p>Descubra como essas estruturas protegem e controlam o que entra e sai da célula.</p>
+  </header>
+
+  <section>
+    <div class="card">
+      <h2>🔬 O que é a Parede Celular?</h2>
+      <p>
+        A <strong>parede celular</strong> é uma estrutura rígida que envolve a membrana plasmática de certas células, como as das plantas, fungos e bactérias. 
+        Sua principal função é oferecer <strong>proteção e sustentação</strong>, evitando que a célula se rompa em ambientes com excesso de água.
+      </p>
+      <p>
+        Nas plantas, é composta principalmente por <strong>celulose</strong>; nos fungos, por <strong>quitina</strong>; e nas bactérias, por <strong>peptidoglicano</strong>.
+      </p>
+      <div class="img-container">
+        <img src="../imagens/celula-vegetal.jpg" alt="Estrutura da célula vegetal com parede celular">
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>🧫 O que é a Membrana Plasmática?</h2>
+      <p>
+        A <strong>membrana plasmática</strong> é uma fina camada que envolve todas as células, controlando a entrada e saída de substâncias. 
+        É formada por uma <strong>bicamada de lipídios</strong> com proteínas embutidas, conhecida como <em>modelo do mosaico fluido</em>.
+      </p>
+      <p>
+        Essa estrutura permite que a célula mantenha um ambiente interno estável — um processo chamado de <strong>homeostase</strong>.
+      </p>
+      <div class="img-container">
+        <img src="../imagens/membrana-plasmatica.jpg" alt="Estrutura da membrana plasmática">
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>⚖️ Diferenças entre as Duas Estruturas</h2>
+      <ul>
+        <li><strong>Parede Celular:</strong> Presente em plantas, fungos e bactérias; rígida e resistente.</li>
+        <li><strong>Membrana Plasmática:</strong> Presente em todas as células; flexível e seletiva.</li>
+        <li><strong>Função:</strong> A parede dá suporte e proteção; a membrana regula trocas com o meio externo.</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h2>Vídeo explicativo</h2>
+      <video src="../vídeos/#"></video>
+    </div>
+  </section>
+
+  <footer>
+    <p>🌱 Criado para fins educativos por <a href="#">DeChinelo</a> | 2025</p>
+  </footer>
+
+<script src="../js/script.js"></script>
 </body>
 </html>
