--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,10 @@
     </div>
     <div class="card">
       <h2>Vídeo explicativo</h2>
-      <video src="../vídeos/#"></video>
+      <video width="640" height="360" controls>
+    <source src="../vídeos/Vídeo do WhatsApp de 2025-10-24 à(s) 16.19.25_fd3613d3.mp4" type="video/mp4">
+    Seu navegador não suporta o elemento de vídeo.
+  </video>
     </div>
   </section>
 
