--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-=<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Parede Celular e Membrana Plasmática</h1>
-    <p>Descubra como essas estruturas protegem e controlam o que entra e sai da célula.</p>
+    <p>Descubra como essas estruturas protegem, sustentam e controlam o que entra e sai da célula.</p>
   </header>
 
   <section>
@@ -17,10 +17,14 @@
       <h2>🔬 O que é a Parede Celular?</h2>
       <p>
         A <strong>parede celular</strong> é uma estrutura rígida que envolve a membrana plasmática de certas células, como as das plantas, fungos e bactérias. 
-        Sua principal função é oferecer <strong>proteção e sustentação</strong>, evitando que a célula se rompa em ambientes com excesso de água.
+        Sua principal função é oferecer <strong>proteção, sustentação e forma</strong> à célula, além de impedir que ela se rompa em ambientes com excesso de água (processo de <em>osmose</em>).
       </p>
       <p>
-        Nas plantas, é composta principalmente por <strong>celulose</strong>; nos fungos, por <strong>quitina</strong>; e nas bactérias, por <strong>peptidoglicano</strong>.
+        Nas plantas, a parede celular é composta principalmente por <strong>celulose</strong>, um polissacarídeo resistente. 
+        Nos fungos, ela é formada por <strong>quitina</strong>, e nas bactérias, por <strong>peptidoglicano</strong> (ou mureína).
+      </p>
+      <p>
+        Essa estrutura também permite a <strong>comunicação entre células vizinhas</strong> por meio de canais chamados <em>plasmodesmos</em>.
       </p>
       <div class="img-container">
         <img src="../imagens/celula-vegetal.jpg" alt="Estrutura da célula vegetal com parede celular">
@@ -31,10 +35,18 @@
       <h2>🧫 O que é a Membrana Plasmática?</h2>
       <p>
         A <strong>membrana plasmática</strong> é uma fina camada que envolve todas as células, controlando a entrada e saída de substâncias. 
-        É formada por uma <strong>bicamada de lipídios</strong> com proteínas embutidas, conhecida como <em>modelo do mosaico fluido</em>.
+        É formada por uma <strong>bicamada de fosfolipídios</strong> com proteínas, colesterol e carboidratos, formando o <em>modelo do mosaico fluido</em>.
       </p>
       <p>
-        Essa estrutura permite que a célula mantenha um ambiente interno estável — um processo chamado de <strong>homeostase</strong>.
+        Ela é <strong>semipermeável</strong>, ou seja, permite a passagem seletiva de substâncias, mantendo o equilíbrio interno da célula — um processo chamado de <strong>homeostase</strong>.
+      </p>
+      <p>
+        Além disso, a membrana plasmática participa de processos como:
+        <ul>
+          <li><strong>Transporte ativo:</strong> gasto de energia para mover substâncias contra o gradiente de concentração;</li>
+          <li><strong>Transporte passivo:</strong> movimentação sem gasto de energia (difusão e osmose);</li>
+          <li><strong>Endocitose e exocitose:</strong> entrada e saída de grandes moléculas ou partículas.</li>
+        </ul>
       </p>
       <div class="img-container">
         <img src="../imagens/membrana-plasmatica.jpg" alt="Estrutura da membrana plasmática">
@@ -42,19 +54,70 @@
     </div>
 
     <div class="card">
-      <h2>⚖️ Diferenças entre as Duas Estruturas</h2>
+      <h2>⚖️ Diferenças entre Parede Celular e Membrana Plasmática</h2>
+      <table border="1" cellpadding="8" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Característica</th>
+            <th>Parede Celular</th>
+            <th>Membrana Plasmática</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Presença</td>
+            <td>Somente em plantas, fungos, bactérias e algumas algas</td>
+            <td>Em todas as células (animais, vegetais, bactérias, fungos etc.)</td>
+          </tr>
+          <tr>
+            <td>Composição</td>
+            <td>Celulose, quitina ou peptidoglicano</td>
+            <td>Fosfolipídios, proteínas e carboidratos</td>
+          </tr>
+          <tr>
+            <td>Função</td>
+            <td>Proteção e sustentação</td>
+            <td>Controle da entrada e saída de substâncias</td>
+          </tr>
+          <tr>
+            <td>Flexibilidade</td>
+            <td>Rígida</td>
+            <td>Flexível e dinâmica</td>
+          </tr>
+          <tr>
+            <td>Permeabilidade</td>
+            <td>Permeável</td>
+            <td>Semipermeável</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="card">
+      <h2>🌿 Funções Biológicas Importantes</h2>
       <ul>
-        <li><strong>Parede Celular:</strong> Presente em plantas, fungos e bactérias; rígida e resistente.</li>
-        <li><strong>Membrana Plasmática:</strong> Presente em todas as células; flexível e seletiva.</li>
-        <li><strong>Função:</strong> A parede dá suporte e proteção; a membrana regula trocas com o meio externo.</li>
+        <li>A parede celular impede a ruptura da célula em ambientes hipotônicos.</li>
+        <li>A membrana plasmática permite o reconhecimento celular e a comunicação entre células.</li>
+        <li>Ambas são essenciais para a manutenção da integridade e do funcionamento celular.</li>
       </ul>
     </div>
+
     <div class="card">
-      <h2>Vídeo explicativo</h2>
+      <h2>💡 Curiosidades</h2>
+      <ul>
+        <li>As células animais <strong>não possuem parede celular</strong>, o que as torna mais flexíveis.</li>
+        <li>O colesterol presente na membrana plasmática <strong>ajuda a controlar sua fluidez</strong>.</li>
+        <li>Algumas bactérias possuem uma <strong>segunda membrana externa</strong>, além da parede celular, aumentando sua resistência a antibióticos.</li>
+        <li>Os <strong>plasmodesmos</strong> nas plantas e as <strong>junções comunicantes</strong> nos animais são estruturas que permitem a troca de substâncias entre células.</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h2>🎥 Vídeo Explicativo</h2>
       <video width="640" height="360" controls>
-    <source src="../vídeos/Vídeo do WhatsApp de 2025-10-24 à(s) 16.19.25_fd3613d3.mp4" type="video/mp4">
-    Seu navegador não suporta o elemento de vídeo.
-  </video>
+        <source src="../vídeos/Vídeo do WhatsApp de 2025-10-24 à(s) 16.19.25_fd3613d3.mp4" type="video/mp4">
+        Seu navegador não suporta o elemento de vídeo.
+      </video>
     </div>
   </section>
 
@@ -62,6 +125,6 @@
     <p>🌱 Criado para fins educativos por <a href="#">DeChinelo</a> | 2025</p>
   </footer>
 
-<script src="../js/script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 </html>
