--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <div class="card">
       <h2>🎥 Vídeo Explicativo</h2>
-      <video width="640" height="360" controls>
+      <video controls>
         <source src="../vídeos/Vídeo do WhatsApp de 2025-10-24 à(s) 16.19.25_fd3613d3.mp4" type="video/mp4">
         Seu navegador não suporta o elemento de vídeo.
       </video>
